<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (C) 2011-2015 Tri plus grupa d.o.o <info@3plus.hr>
  ~  All rights reserved.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_nameMain">Zipato</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="but_login">Connect</string>
    <string name="title_activity_light">LightActivity</string>
    <string name="login_fail">Login fail</string>
    <string name="log_in_dialog_message">Login…</string>
    <string name="no_attributes_found">No attributes found</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="connect">Connect</string>
    <string name="local_connection">Local connection</string>
    <string name="register">Register</string>
    <string name="log_in_text_message">Log in for all</string>
    <string name="log_in_text_message1"> Zipato</string>
    <string name="log_in_text_message2"> services</string>
    <string name="login_pane_title">Remote connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_message">Please connect to the internet and try again.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">E-mail ip</string>
    <string name="title_activity_browser_manager">Browser Manager</string>
    <string name="title_activity_attributes_browser">AttributesBrowserActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_attrbutes_browser_activity_test">AttrbutesBrowserActivityTest</string>
    <string name="title_activity_device_manager">Device Manager</string>
    <string name="content_description_log_in_image">Log in logo image</string>
    <string name="title_activity_register">Register</string>
    <string name="reg_success_text1">Your Zipato account has been successfully created</string>
    <string name="reg_success_text2">You can now check your e-mail account to confirm the registration</string>
    <string name="incorrect_name">Please enter a valid first name</string>
    <string name="incorrect_surname">Please enter a valid Last name</string>
    <string name="incorrect_email">Please enter a valid email</string>
    <string name="incorrect_password">Password should be at least 8 characters</string>
    <string name="thank_you">Thank you.</string>
    <string name="registering_fail">Registering fail</string>
    <string name="no_null_input">No null input is allowed</string>
    <string name="registering">registering</string>
    <string name="remote_connection">Remote Connection</string>
    <string name="title_activity_forget_password_activity">Reset Password</string>
    <string name="recovery_password">Recovery password</string>
    <string name="recovery_text1">Please provide us with a valid e-mail ip:</string>
    <string name="recovery_text2">You can now check your e-mail account for recovery instructions</string>
    <string name="processing">Processing…</string>
    <string name="success">Success!</string>

    <!-- Recently Added -->


    <string name="but_run_scene_title">RUN SCENE</string>
    <string name="add_new_scene">Add a new scene</string>
    <string name="selectAll">Select all</string>
    <string name="choose_background_color">Choose background color</string>
    <string name="choose_icon">Choose icon</string>
    <string name="title_activity_test">Controller Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_thermos_controller">TestThermosController</string>
    <string name="cooling">Cooling</string>
    <string name="heating">Heating</string>
    <string name="start_at">starts at</string>
    <string name="current">Current</string>
    <string name="temperature">temperature</string>
    <string name="current_illumination">Current illumination</string>
    <string name="energy_consumption">Energy consumption</string>
    <string name="empty_field">field cannot be empty</string>
    <string name="fill_field_properly">Please fill the fields properly</string>
    <string name="failed">Failed</string>
    <string name="current_mode">Current Mode</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="save">Save</string>
    <string name="deviceManagerTextMenu">Device Manager</string>
    <string name="sceneTextMenu">Scenes</string>
    <string name="deviceBrowserTextMenu">Device Browser</string>
    <string name="main_menu">Main Menu</string>

    <string name="select_network">Select your network</string>
    <string name="select_device">Select your device</string>

    <string name="cancel">CANCEL</string>
    <string name="step">STEP</string>
    <string name="add_new_device">add a new device</string>
    <string name="joining_device">Joining device…</string>

    <string name="stating_discovery">Starting discovery…</string>///////////////////
    <string name="searching_device">Searching for devices…</string>//////////////////
    <string name="set_inclusion">into the inclusion mode</string>
    <string name="please_triggger">Please trigger your</string>
    <string name="device">device</string>
    <string name="join_device_text1">If you don\'t know how to set your device\n into the inclusion mode, please consult\n the user\'s manual of your device.</string>
    <string name="tap_to_try_again">Please tap the retry button to try again.</string>
    <string name="discovery_fail">Discovery fail</string>/////////////////
    <string name="discovery_already_running">A Discovery/Removal process is already running. Please try again later</string>
    <string name="device_joined">Device Joined</string>//////////////////
    <string name="congratulation">Congratulations!</string>
    <string name="device_joined_text1">You can now start using your new</string>
    <string name="done">Done</string>////////////////////////
    <string name="discovery_removal_fail">Restarting fail</string>///////////////////
    <string name="device_remove">Device removed</string>////////////////////////////////
    <string name="device_remove_text1">Initializing next step…</string>
    <string name="set_exclusion">into exclusion mode</string>
    <string name="remove_device_text1">If you don\'t know how to set your device\n into the exclusion mode, please consult\n the user\'s manual of your device.</string>
    <string name="stating_removal">Starting removal…</string>/////////////////
    <string name="restart_fail">Restarting fail</string>//////////////////
    <string name="discovery_comunication_error">Could not get an answer from the server.</string>
    <string name="force_discovery">Force discovery</string>
    <string name="force_discovery_message">Start force device recovery?</string>
    <string name="add_device">Add device</string>
    <string name="removing_device">Starting device removal…</string>
    <string name="device_found">Device found</string>/////////
    <string name="discovery_timeout">Timeout!</string>
    <string name="enter_pin">Please enter pin</string>
    <string name="clear">Clear</string>
    <string name="arm">Arm</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="disarm">Disarm</string>
    <string name="current_status">Current status</string>
    <string name="bypass">BYPASS</string>
    <string name="bypassed">BYPASSED</string>
    <string name="ready">ready</string>
    <string name="not_ready">not ready</string>
    <string name="tripped">tripped</string>
    <string name="establishing_secure_connection">Establishing secure connection…</string>
    <string name="pin_verification_sucess">Pin OK! Processing request…</string>
    <string name="arming">Arming…</string>
    <string name="disarming">Disarming…</string>
    <string name="partition_not_ready">Partition not ready!</string>
    <string name="removeZonesTextMsg">Removed Zones will not be recovered.</string>
    <string name="dialogRemoveZoneTitle">Remove Zones?</string>
    <string name="remove">Remove</string>
    <string name="removing_zone">Removing:</string>
    <string name="internet_error">internet error: please connect to internet and try again</string>
    <string name="internet_error_refresh">Internet error: please connect to internet and reset</string>
    <string name="error_partition_is_armed">Error: partition is armed</string>
    <string name="connection_error">Connection with server error : please try again later</string>
    <string name="reset">Refresh</string>
    <string name="ringing">Ringing</string>
    <string name="title_activity_discovery">Add device</string>
    <string name="acknowledge">ACKNOWLEDGE</string>
    <string name="acknowledging_event">Acknowledging event</string>
    <string name="ok">OK</string>
    <string name="not_ok">not ok</string>
    <string name="was_tripped">Was tripped</string>
    <string name="error_please_disarm_first">Please disarm first Zone not Ok or tripped</string>
    <string name="delete">Delete</string>
    <string name="reapply_device_desc">(re)apply device descriptors</string>
    <string name="removeDeviceTextMsg" />
    <string name="dialogRemoveDeviceTitle">Remove device?</string>
    <string name="removing_device2">Removing device…</string>
    <string name="error_only_device_can_be_remove">error:only devices can be removed</string>
    <string name="logout">Logout</string>
    <string name="logout_progress">Processing logout...</string>
    <string name="error_only_available_for_device">Error: only available for devices</string>
    <string name="reapply_des_for_device">(re)apply descriptors for device:</string>
    <string name="fail">fail</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="take_snap_shot">Take a snapshot</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="reg_box">Zipabox</string>
    <bool name="portrait_only">true</bool>
    <string name="sender_ID">777169571904</string>
    <string name="base_url">https://my.zipato.com/zipato-web/</string>
    <string name="feedbackMail">support@zipato.com</string>
    <string name="next">next</string>
    <string name="camera_activity_class">com.zipato.appv2.activities.CameraActivity</string>
    <string-array name="custom_brand_list">
    </string-array>
</resources>
