<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (C) 2011-2015 Tri plus grupa d.o.o <info@3plus.hr>
  ~  All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/rename"
        android:orderInCategory="98"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:orderInCategory="99"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/reapply"
        android:icon="@drawable/sticker_icon"
        android:orderInCategory="98"
        android:title="@string/reapply_device_desc"
        app:showAsAction="always" />
    <item
        android:id="@+id/selectAll"
        android:orderInCategory="101"
        android:title="@string/selectAll"
        app:showAsAction="never" />

</menu>