<?xml version="1.0" encoding="utf-8"?>

<!--
  ~  Copyright (C) 2011-2015 Tri plus grupa d.o.o <info@3plus.hr>
  ~  All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reg_success_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_view_controller_main_background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">


    <include layout="@layout/zipato_logo_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRegSuccessText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reg_success_text1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/textViewRegSuccessThank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/thank_you"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_grey" />

        <LinearLayout
            android:layout_width="80sp"
            android:layout_height="0.5sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_white"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/textViewRegSuccessText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reg_success_text2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_white" />

    </LinearLayout>

</LinearLayout>