<?xml version="1.0" encoding="utf-8"?>

<!--
  ~  Copyright (C) 2011-2015 Tri plus grupa d.o.o <info@3plus.hr>
  ~  All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_view_controller_main_background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"

    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical">
    <include layout="@layout/zipato_logo_screen" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRecovery1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoText="false"
            android:gravity="center"
            android:text="@string/recovery_text1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/username_icon" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/layout_login_text_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/separator_margin"
                android:background="@color/color_white"
                android:orientation="horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonRecovery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/view_controller_footer_but_padding"
            android:text="@string/recovery_password"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/layout_login_text_size2" />

        <LinearLayout
            android:id="@+id/linearLayoutRecoveryText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textViewRecoveryThank_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/thank_you"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_grey" />

            <TextView
                android:id="@+id/textViewRecovery2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/recovery_text2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_white" />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>


</LinearLayout>