<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2011-2015 Tri plus grupa d.o.o <info@3plus.hr>
  ~  All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_view_controller_main_background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/color_view_controller_item_background">

        <TextView
            android:id="@+id/buttonStep"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_dis_but_cancel_height"
            android:layout_margin="@dimen/activity_dis_margin1"
            android:background="@color/step_green_color"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/step"
            android:textColor="@color/color_white"
            android:textSize="@dimen/activity_dis_butt_tex_size" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/wizard_margin"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_white"
        tools:text="Sub Title Here" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.0"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/wizard_margin2"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white"
                tools:text="here goes the body of the content hahaha modafackers" />

            <ListView

                android:id="@+id/listViewTypeFiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/wizard_margin2" />


        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewCounter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/wizard_margin"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/wizard_counter_text_size"
            android:visibility="gone"
            tools:text="50"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_dis_margin1"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/view_controller_footer_but_padding"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/activity_dis_butt_tex_size"
            android:visibility="gone"
            tools:visibility="visible" />
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_dis_margin1"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/view_controller_footer_but_padding"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="@dimen/activity_dis_butt_tex_size"
            android:visibility="gone"
            tools:visibility="visible" />
        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_dis_margin1"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/view_controller_footer_but_padding"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/activity_dis_butt_tex_size"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonRep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_dis_margin1"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/view_controller_footer_but_padding"
            android:textAllCaps="false"
            android:textSize="@dimen/activity_dis_butt_tex_size"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>


</LinearLayout>